# swagger.yml
@@ -26,11 +26,28 @@ paths:
         - auth
       summary: Login
       description: Returns a JWT token
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: body
+          description: Credentials
+          required: true
+          in: body
+          schema:
+            $ref: "#/definitions/AuthRequest"
       responses:
         200:
           description: successful operation
           schema:
             $ref: "#/definitions/AuthToken"
+        403:
+          description: forbidden
+          schema:
+            $ref: "#/definitions/Error"
+          examples:
+            application/json: { "code": 403, "message": {"text": "forbidden"}}
         500:
           description: internal server error
           schema:
@@ -333,6 +350,17 @@ definitions:
       code:
         type: integer
       message:
+        type: string
+
+  AuthRequest:
+    type: object
+    required:
+      - login
+      - password
+    properties:
+      login:
+        type: string
+      password:
         type: string
 
   AuthToken:
